# Apex-AI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  apexai.bat  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.github/workflows/: precompute.yml
backend/: __init__.py  main.py
backend/routers/: admin.py  compare.py  lap.py  replay.py  sessions.py  strategy.py  telemetry.py  websocket.py
backend/services/: cache.py  f1_adapter.py  tasks.py
desktop/: electron-builder.json  installer-extras.nsh  main.js  package.json  preload.js
desktop-backend/: apex-ai-backend.spec  main.py
docker/: backend.Dockerfile  frontend.Dockerfile
documentation/: columnar-replay-optimization.md  desktop-exe-and-pipeline.md  docker-dev.md  full-stack-web-app-plan.md  offload-compute.md  render-memory-optimization.md  render-optimization.md  session-timeout-resilience.md  windows-exe-plan.md
documentation/workflows/: desktop-build.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queries.ts
frontend/src/components/: Leaderboard.tsx  PlaybackControls.tsx  QualifyingViewer.tsx  ReplayViewer.tsx  SessionInfo.tsx  SessionPicker.tsx  TrackCanvas.tsx  WeatherPanel.tsx
frontend/src/hooks/: useReplayPlayback.ts  useWebSocketReplay.ts
frontend/src/styles/: tokens.css
scripts/: build-desktop.ps1  precompute_to_supabase.py
src/: f1_data.py  track_geometry.py  ui_components.py
(+21 files in other folders)
