[project]
name = "apex-ai"
version = "0.1.0"
description = "F1 Race Replay - full-stack web app with FastAPI backend and React frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastf1",
    "pandas",
    "matplotlib",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "orjson>=3.11.7",
    "cachetools>=7.0.5",
    "supabase>=2.25.1",
    "redis>=5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
# Virtual project: only dependencies are installed, no package build
package = false
